@@ -1,9 +1,11 @@
 package com.github.alexishuf.fastersparql.client.util;
 
+import com.github.alexishuf.fastersparql.batch.type.BatchMerger;
 import com.github.alexishuf.fastersparql.batch.type.TermBatch;
 import com.github.alexishuf.fastersparql.model.BindType;
 import com.github.alexishuf.fastersparql.model.Vars;
 import com.github.alexishuf.fastersparql.sparql.expr.Term;
+import com.github.alexishuf.fastersparql.util.owned.Guard;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
@@ -33,7 +35,7 @@ class MergerTest {
                 asList("x",    "x,y",  EXISTS,   "_:l0",       "_:r0",  "_:l0"),
                 asList("x,y",  "y,z",  MINUS,    "_:l0,_:l1",  "_:r1",  "_:l0,_:l1")
         ).map(l -> arguments(
-                Vars.of(l.get(0).toString().split(",")),      // leftVars
+                Vars.of(l.getFirst().toString().split(",")),      // leftVars
                 Vars.of(l.get(1).toString().split(",")),      // rightVars
                 l.get(2),                                           // bindType
                 termList((Object[]) l.get(3).toString().split(",")), // left
@@ -45,16 +47,22 @@ class MergerTest {
     @ParameterizedTest @MethodSource
     void testMerge(Vars leftVars, Vars rightVars, BindType bindType,
                    List<Term> left, List<Term> right, List<Term> expected) {
-        TermBatch lb = TermBatch.of(range(0, left.size()).mapToObj(i -> (Term)null).toList(), left);
-        int lr = 1;
-        TermBatch rb = TermBatch.of(right);
-        TermBatch eb = TermBatch.of(expected);
+        BatchMerger<TermBatch, ?> merger;
+        try (var lbG = new Guard.BatchGuard<TermBatch>(this);
+             var rbG = new Guard.BatchGuard<TermBatch>(this);
+             var ebG = new Guard.BatchGuard<TermBatch>(this);
+             var acG = new Guard.BatchGuard<TermBatch>(this)) {
+            var lb = lbG.set(TermBatch.of(
+                    range(0, left.size()).mapToObj(_ -> (Term)null).toList(), left));
+            int lr = 1;
+            var rb = rbG.set(TermBatch.of(right));
+            var eb = ebG.set(TermBatch.of(expected));
 
-        Vars rightFreeVars = rightVars.minus(leftVars);
-        Vars outVars = bindType.resultVars(leftVars, rightVars);
-        var merger = TERM.merger(outVars, leftVars, rightFreeVars);
-        TermBatch ac = merger.merge(null, lb, lr, rb);
-        assertEquals(eb, ac);
-        ac.recycle();
+            Vars rightFreeVars = rightVars.minus(leftVars);
+            Vars outVars = bindType.resultVars(leftVars, rightVars);
+            merger = TERM.merger(outVars, leftVars, rightFreeVars).takeOwnership(this);
+            var ac = acG.set(merger.merge(null, lb, lr, rb));
+            assertEquals(eb, ac);
+        }
     }
 }
